# LLM4PaperRead

./: .gitignore  README-v1.md  README.md  input.txt  requirement.txt
app/: debug.py  main.py  test.py
app/static/css/: styles.css
app/static/js/: classic.js  latest.js
app/templates/: classic.html  index.html  latest.html  pdf_viewer.html  summary_viewer.html
data/arxiv/: meta_paper.csv  meta_paper.jsonl
data/semantic/: meta_paper.csv  meta_paper.jsonl
outputs/arxiv/log_files/: 2025-06-09_HeuriGym__An_Agentic_Benchmark_for_LLM-Crafted_Heu.json  2025-06-09_Reparameterized_LLM_Training_via_Orthogonal_Equiva.json  2025-06-09_SlideCoder__Layout-aware_RAG-enhanced_Hierarchical.json  2025-06-09_SoK__Data_Reconstruction_Attacks_Against_Machine_L.json  2025-06-09_Supporting_Construction_Worker_Well-Being_with_a_M.json
outputs/arxiv/report_files/: 2025-06-09_Addition_in_Four_Movements__Mapping_Layer-wise_Inf.md  2025-06-09_Adversarial_Attack_Classification_and_Robustness_T.md  2025-06-09_Aligning_Text__Images__and_3D_Structure_Token-by-T.md  2025-06-09_Augmenting_LLMs__Reasoning_by_Reinforcing_Abstract.md  2025-06-09_Beyond_Benchmarks__A_Novel_Framework_for_Domain-Sp.md  2025-06-09_Correlated_Errors_in_Large_Language_Models.md  (+42 more)
paper_crawler/: arxiv_crawler.py  semantic_crawler.py
paper_read/: pyproject.toml
paper_read/src/paper_read/: main.py  paper_crew.py
paper_read/src/paper_read/config/: agents.yaml  tasks.yaml
paper_read/src/paper_read/source/: custom_crew.py  filehandler.py
paper_read/src/paper_read/tools/: custom_llm.py
(+111 files in other folders)
