[project]
name = "paper_read"
version = "0.1.0"
description = "paper_read using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
paper_read = "paper_read.main:run"
run_crew = "paper_read.main:run"
train = "paper_read.main:train"
replay = "paper_read.main:replay"
test = "paper_read.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
